--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".TribeList"
+            android:name=".RequestActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -26,6 +26,10 @@
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".UserLoggedInActivity" />
         <activity android:name=".SignUpActivity" />
+        <activity android:name=".AcceptedActivity"/>
+        <activity android:name=".TribeList"/>
+        <activity android:name=".RequestingUserProfileActivity"/>
+        <activity android:name=".RejectedListActivity"/>
     </application>
 
 </manifest>
